--- a/src/styles/labels.scss
+++ b/src/styles/labels.scss
@@ -136,7 +136,6 @@
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
               Helvetica, Arial, sans-serif, "Apple Color Emoji",
               "Segoe UI Emoji";
-            line-height: 22px;
             text-align: center;
           }
         }
@@ -197,7 +196,6 @@
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
               Helvetica, Arial, sans-serif, "Apple Color Emoji",
               "Segoe UI Emoji";
-            line-height: 22px;
             text-align: center;
           }
         }
